# CrypticBuilder

./: .gitignore  .llm_cache.json  .output.txt  ConfigurationMetrics.yml  app.py  main.py  output.txt  output_new.txt  pyproject.toml  readme.txt  reproduce_gutted.py  substitutions.yml  test_synonyms.py
src/: scoring_config.py  utils.py
src/corpus/: __init__.py  base.py  corpus.py  preprocess_corpus.py
src/finder/: finder.py
src/llm/: __init__.py  indicator_suggestor.py  llm_scorer.py
src/step/: anagram.py  charade.py  concat.py  double_definition.py  hidden.py  letter_deletion.py  letter_replacement.py  letter_selection.py  positional_deletion.py  reversal.py  step.py  substitution.py  word_insertion.py
